--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,6 +9,15 @@ body {
   background-color: var(--white-color);
   font-size: 16px;
 }
+h1, h2, h3, p {
+  margin-top: 0;
+  margin-bottom: 0;}
+
+  ul {margin-top: 0;
+  margin-bottom: 0;
+padding-left: 0;}
+
+
 
 /* Logo */
 
