--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -27,7 +27,8 @@ img {
 }
 
 *,
-*::before, *::after {
+*::before,
+*::after {
   box-sizing: border-box;
 }
 
@@ -45,8 +46,8 @@ img {
 
 .page-header {
   text-align: center;
-  background: #FFFFFF;
-border-bottom: 1px solid #E7E9FC;
+  background: #ffffff;
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .logo-header {
@@ -171,7 +172,9 @@ border-bottom: 1px solid #E7E9FC;
 
 /* Sections */
 
-.fetaure-section {padding: 120px 0;}
+.fetaure-section {
+  padding: 120px 0;
+}
 
 .hero-title {
   color: var(--white-color);
@@ -191,7 +194,6 @@ border-bottom: 1px solid #E7E9FC;
   color: var(--secondary-text-color);
   margin-bottom: 72px;
   padding-top: 120px;
-
 }
 .section-title {
   font-weight: 500;
@@ -202,8 +204,9 @@ border-bottom: 1px solid #E7E9FC;
   margin-bottom: 8px;
 }
 
-.team-card-photo {margin-bottom: 32px;}
-
+.team-card-photo {
+  margin-bottom: 32px;
+}
 
 .hidden {
   position: absolute;
@@ -235,7 +238,8 @@ border-bottom: 1px solid #E7E9FC;
   color: var(--primary-text-color);
   margin-bottom: 32px;
 }
-.feature-list {display: flex;
+.feature-list {
+  display: flex;
   margin: 0;
 
   padding: 0;
@@ -246,7 +250,9 @@ border-bottom: 1px solid #E7E9FC;
   padding: 0;
 }
 
-.feature:not(:last-child) {margin-right: 24px;}
+.feature:not(:last-child) {
+  margin-right: 24px;
+}
 
 .section2 {
   list-style: none;
@@ -254,7 +260,9 @@ border-bottom: 1px solid #E7E9FC;
   padding-bottom: 120px;
 }
 
-.section2photo:not(:last-child) {margin-right: 24px;}
+.section2photo:not(:last-child) {
+  margin-right: 24px;
+}
 .ourteam {
   background: #f4f4fd;
   text-align: center;
@@ -265,13 +273,16 @@ border-bottom: 1px solid #E7E9FC;
   padding-bottom: 120px;
 }
 
-.team-card:not(:last-child) {margin-right: 24px;}
+.team-card:not(:last-child) {
+  margin-right: 24px;
+}
 
 .team-card {
-  background: #FFFFFF;
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  border-radius: 0px 0px 4px 4px;}
-
+  background: #ffffff;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+  border-radius: 0px 0px 4px 4px;
+}
 
 .footer-background {
   background: #2e2f42;
@@ -283,7 +294,7 @@ border-bottom: 1px solid #E7E9FC;
   letter-spacing: 0.02em;
   color: #e7e9fc;
   width: 264px;
-    margin-top: 16px;
+  margin-top: 16px;
 }
 
 /* Portfolio */
@@ -320,23 +331,28 @@ border-bottom: 1px solid #E7E9FC;
   list-style: none;
   display: flex;
   flex-wrap: wrap;
-  
-  
+  margin-bottom: 120px;
 }
+
 .filters-text:hover {
   color: var(--white-color);
 }
 
-.btn:not(:last-child) {margin-right: 24px;}
+.btn:not(:last-child) {
+  margin-right: 24px;
+}
 
 .project-card {
-  
-  background: #FFFFFF;
-border: 1px solid #E7E9FC;
-margin-bottom: 48px;}
+  max-width: 360px;
+  background: #ffffff;
+  border: 1px solid #e7e9fc;
+  margin-bottom: 48px;
+}
 
-.project-card:not( :nth-child(3n)) {margin-right: 20px;}
+.project-card:not(:nth-child(3n)) {
+  margin-right: 24px;
+}
 
-.profect-card-photo {margin-bottom: 32px;}
-
-
+.profect-card-photo {
+  margin-bottom: 32px;
+}
