--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -308,7 +308,7 @@ img {
 .button-all:hover,
 .button-all:focus {
   color: var(--white-color);
-  background-color: var(--accent-color);
+  background-color: var(--hover-ocean--);
 }
 .button-all {
   padding: 12px 24px;
