--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -138,7 +138,7 @@ img {
 
 .address-link:hover,
 .address-link:focus {
-  color: var(--accent-color);
+  color: var(--hover-ocean--);
 }
 
 .address-link {
@@ -161,13 +161,14 @@ img {
   background: var(--accent-color);
   cursor: pointer;
   text-align: center;
-  display: inline-block;
+  display: block;
   padding: 16px 32px;
   font-weight: 500;
   line-height: 1.5;
   color: var(--white-color);
   border-radius: 4px;
   border: none;
+  margin: 0 auto;
 }
 
 /* Sections */
@@ -266,7 +267,7 @@ img {
   margin-right: 24px;
 }
 .ourteam {
-  background: #f4f4fd;
+  background: var(--button-all--);
   text-align: center;
 }
 .team-list {
@@ -279,7 +280,7 @@ img {
 }
 
 .team-card {
-  background: #ffffff;
+  background: var(--white-color);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16),
     0px 2px 1px rgba(46, 47, 66, 0.08);
   border-radius: 0px 0px 4px 4px;
